fix(react): set scrollbar to bottom on webchat open

--- a/packages/botonic-react/src/webchat/components/styled-scrollbar.scss
+++ b/packages/botonic-react/src/webchat/components/styled-scrollbar.scss
@@ -1,6 +1,5 @@
 #botonic-scrollable-content {
   .simplebar-mask .simplebar-offset .simplebar-content-wrapper {
-    scroll-behavior: smooth;
     overscroll-behavior: contain; // https://css-tricks.com/almanac/properties/o/overscroll-behavior/
     -webkit-overflow-scrolling: touch;
   }
